Created Responsive About page

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     </div>
   </nav>
 
+  <!-- Home Page -->
   <div class="home">
     <div class="home-text">
       <div class="hi">
@@ -43,9 +44,52 @@
       <button class="resume-download">Download My Resume</button>
     </div>
     <div class="home-img">
-      <img src="./images/passport1.jpg" alt="">
+      <img src="./images/1.jpg" alt="">
     </div>
   </div>
+
+  <!-- About Page -->
+<div class="about-container">
+  <div class="about-img">
+    <img src="./images/with laptop.jpg" alt="">
+  </div>
+  <div class="about-text">
+    <div class="about-heading">
+      <img src="./images/orangeDot.png" alt="orange-dot">
+      <p>About Me</p>
+    </div>
+    <h1 class="heading-about">Code, Creativity and Me</h1>
+    <p class="about-paragraph">&emsp; Hi there! I’m Bharath, I hold a Bachelor of Computer Applications degree from Vidya First Grade College Affiliated to Tumkur University. I am also certified in Java FullStack Development by J-spiders, Rajajinagar & certified in Responsive web design from freeCodeCamp. I’ve been on an exciting journey of continuous learning. My toolkit includes HTML, CSS, JavaScript and Bootstrap. I’m also a React enthusiast. Additionally, I am proficient in Java, SQL, Spring Boot, Azure, Unix, MS Office and Git.<br> <br> I love turning ideas into interactive web experiences. I’m passionate about crafting pixel-perfect designs that not only look great but also enhance usability. I believe that every line of code should serve a purpose. When I’m not coding, you’ll find me taking long walks — it’s my way of staying active and recharging. <br><br> Let’s chat! Feel free to reach out—I’d love to collaborate on exciting projects.</p>
+    <div class="projects-experience">
+      <div class="project">
+        <img src="./images/rightmark-big.png" alt="right-mark">
+        <h2><span class="nos">18+</span><br>Completed Projects</h2>
+      </div>
+      <div class="experience">
+        <img src="./images/experience-timeline.png" alt="experience-time">
+        <h2><span class="nos">4+</span> <br> Months of Experience</h2>
+      </div>
+    </div>
+    <div class="about-points">
+      <div class="about-point">
+        <i class='bx bx-check-square check'></i>
+        <p>FullStack Web Design</p>
+      </div>
+      <div class="about-point">
+        <i class='bx bx-check-square check'></i>
+        <p>Database Management</p>
+      </div>
+      <div class="about-point">
+        <i class='bx bx-check-square check'></i>
+        <p>Cloud Deployment</p>
+      </div>
+      <div class="about-point">
+        <i class='bx bx-check-square check'></i>
+        <p>Version Control</p>
+      </div>
+    </div>
+  </div>
+</div>
 
   <script src="script.js"></script>
 </body>
