Created Responsive Services Page

--- a/index.html
+++ b/index.html
@@ -91,6 +91,49 @@
   </div>
 </div>
 
+<div class="services">
+  
+  <div class="services-heading">
+    <img src="./images/orangeDot.png" alt="">
+    <p>&nbsp;My Services</p>
+  </div>
+
+  <h2 class="services-i-offer">SERVICES I OFFER</h2>
+
+<div class="services-container">
+  <div class="service">
+    <i class='bx bxl-java'></i>
+    <h3>FullStack Development</h3>
+    <p>Comprehensive JavaFullStack development: building end-to-end web applications seamlessly.</p>
+  </div>
+  <div class="service">
+    <i class='bx bx-code-alt'></i>
+    <h3>Frontend Development</h3>
+    <p>Crafting dynamic, responsive websites with exceptional user interfaces.</p>
+  </div>
+  <div class="service">
+    <i class='bx bx-code'></i>
+    <h3>Backend Development</h3>
+    <p>Efficient backend development: ensuring seamless data flow and reliable server functionality.</p>
+  </div>
+  <div class="service">
+    <i class='bx bx-data'></i>
+    <h3>Database Management</h3>
+    <p>Efficient database management: ensuring data integrity, optimization, and seamless access</p>
+  </div>
+  <div class="service">
+    <i class='bx bx-laptop'></i>
+    <h3>System Administration</h3>
+    <p>Ensuring system reliability and performance through expert engineering and optimization</p>
+  </div>
+  <div class="service">
+    <i class='bx bx-cloud'></i>
+    <h3>Cloud Computing</h3>
+    <p>Manages cloud-based services and ensures seamless integration and performance.</p>
+  </div>
+</div>
+</div>
+
   <script src="script.js"></script>
 </body>
 </html>
