developed resume section

--- a/index.html
+++ b/index.html
@@ -134,6 +134,84 @@
 </div>
 </div>
 
+ <!-- Resume container-->
+ <div id="resume">
+  <h1 class="resumeHeading">Resume</h1>
+  
+  <div class="resume-container">
+    <div class="timelines">
+      <div class="timeline"></div>
+      <div class="round round1"></div>
+      <h2 class="education-heading">Education</h2>
+      <div class="round round2"></div>
+      <h2 class="Skills-heading">Skills</h2>
+      <div class="round round3"></div>
+      <h2 class="experience-heading">Experience</h2>
+    </div>
+
+     
+<div class="sections">
+  <h1 class="responsive-heading">Experience</h1>
+  <div class="education">
+    <div class="edu edu1">
+      <h2>BCA(Computer Science)</h2>
+      <p>Vidya First Grade College, Tumkur</p>
+      <p>2023</p>
+    </div>
+    <div class="edu edu2">
+      <h2>12th(PCMB)</h2>
+      <p>Government PU College, Koratagere</p>
+      <p>2020</p>
+    </div>
+    <div class="edu edu3">
+      <h2>10th</h2>
+      <p>Government Junior College, Koratagere</p>
+      <p>2017</p>
+    </div>
+  </div>
+
+  <h1 class="responsive-heading">Skills</h1>
+  <div class="Skills">
+    <div class="skill skill1">
+      <h2>Web Technologies</h2>
+      <p>HTML</p>
+      <p>CSS</p>
+      <p>JavaScript</p>
+      <p>React.js</p>
+      <p>Bootstrap</p>
+    </div>
+    <div class="skill skill2">
+      <h2>Programming Languages & Frameworks</h2>
+      <p>Java</p>
+      <p>Hibernate</p>
+      <p>Springboot</p>
+      <p>SQL</p>
+    </div>
+    <div class="skill skill3">
+      <h2>Other</h2>
+      <p>Data Structures</p>
+      <p>Microsoft Azure</p>
+      <p>Networking</p>
+      <p>Linux</p>
+      <p>Tools: Eclipse, VS Code, MS Office, Git</p>
+      <p></p>
+    </div>
+  </div>
+  
+  <h1 class="responsive-heading">Experience</h1>
+  <div class="experience-section">
+    <div class="experience1">
+      <h1>Scholor Trainee</h1>
+      <h2>Wipro</h2>
+      <h3>Dec 2024 - Present</h3>
+    </div>
+  </div>
+  </div>
+</div>
+</div>
+
+ </div>
+
   <script src="script.js"></script>
 </body>
 </html>
